# AoE3UnHardcoded

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  cmake-vs2017.bat
DLL/: CMakeLists.txt
Patcher/UHCPatcher/: CMakeLists.txt
modules/BangNative/: BangNativeClasses.txt  CMakeLists.txt
modules/BangNative/src/: BangNative.cpp  BangNative.h  BangSymTableGenerated.h
modules/BangNative/src/native/: BCore.h  BGadget.h  BString.h  BWorkDirManager.h
modules/BangNative/src/native/helper/: generator.h
modules/BangNative/tools/BangNativeGenBindings/: .gitignore  bang_native_file_change_detector.py  bang_native_gen_bindings_main.py  bang_native_generator.py  bang_native_parser.py  bang_native_utils.py
modules/BangNative/tools/BangNativeGenBindings/example/: input_list_example.txt
modules/BangNative/tools/BangNativeGenBindings/example/headers/: BAnimationObjectMessageHandler.h  BCoreAnimationMessageHandler.h  BGadget.h  BLayoutObject.h  ex.cpp  generator.h
modules/BangNative/tools/BangNativeGenBindings/output/: BangNativeGenerated.def  SymBangTableGenerated.h
modules/BangNative/tools/BangNativeGenBindings/syspaths/: ccsyspaths_improved.py
modules/DLL/: CMakeLists.txt  DelayLoad.cpp  DumpSyscall.cpp  UHC.cpp  UHC.h
modules/DLL/Feature/: BaseFeature.h
modules/DLL/Modernize/: MainUHCInstance.cpp  MainUHCInstance.h
modules/DLL/Modernize/Config/: Config.cpp  Config.h  DataConverter.cpp  DataConverter.h
modules/DLL/Modernize/Feature/: BaseFeature.h  Features.cpp  Features.h
modules/DLL/Modernize/Feature/BasicFeature/: BasicMemoryPatch.h
modules/DLL/Modernize/Feature/GameplayFeature/: MaxPopOverrideFeature.h
modules/DLL/Modernize/Utils/: PatchUtils.h  StringUtils.h
